# geicar

./: .gitignore  README.md
.github/workflows/: ci.yml
L476_project/: .cproject  .gitignore  .mxproject  .project  L476_project Debug.launch  L476_project.ioc  README.md  STM32L476RGTX_FLASH.ld
L476_project/Application/: application.c  application.h  globalvar.c  globalvar.h  imu.c  imu.h  lidar.c  lidar.h  message.c  message.h  scheduler.c  scheduler.h  trames_nmea.c  trames_nmea.h
L476_project/Debug/: L476_project.list  L476_project.map  makefile  objects.list  sources.mk
carte-io/software/: .cproject  .mxproject  .project  Carte-IO.ioc
general/: debugging_help.md  how_to_use.md  software_development_tips.md
jetsonNano/ros2_ws/: how_to_compile.md
nucleoF103/firmware/: .cproject  .project  F103 Debug.launch  F103.ioc  STM32F103RBTX_FLASH.ld
nucleoL476/: .project  README.md  initial_configuration.md
nucleoL476/firmware/: .cproject  .project  L476.ioc  L476.launch  STM32L476RGTX_FLASH.ld
raspberryPI3/: initial_configuration.md
raspberryPI3/configuration_files/: 50-cloud-init.yaml  99_config.yaml  before.rules  config.txt  dhcpd.conf  isc-dhcp-server  pican2.service
raspberryPI3/ros2_ws/src/us_detection/: CMakeLists.txt  package.xml
raspberryPI3/ros2_ws/src/us_detection/include/us_detection/: us_detection_node.h
raspberryPI3/ros2_ws/src/us_detection/src/: us_detection_node.cpp
ros2_ws/: README.md
ros2_ws/src/serial_comm1/: CMakeLists.txt
ros2_ws/src/serial_comm1/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/serial_comm1/install/serial_comm1/lib/serial_comm1/: listener  talker
ros2_ws/src/serial_comm1/install/serial_comm1/share/ament_index/resource_index/parent_prefix_path/: serial_comm1
ros2_ws/src/serial_comm1/install/serial_comm1/share/serial_comm1/: package.dsv  package.sh  package.zsh
ros2_ws/src/serial_comm1/log/: latest_build
ros2_ws/src/serial_comm1/src/: serial_publisher.cpp  serial_subscriber.cpp
simulation/: README.md
(+368 files in other folders)
